got the basis of the api pulling in information

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-banner></app-banner>
 <app-navigation></app-navigation>
+<app-profile></app-profile>
+<app-rank></app-rank>
+<app-statistics></app-statistics>
+RGAPI-35dc4fb9-53df-44db-a867-f0b08c0dc060
